--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<a href="my.html">首页</a>
+<a href="index.html">首页</a>
 <a href="suser/suse.html">我的宿舍</a>
 <a href="suser/class.html">我的班级</a>
 <a href="suser/aihao.html">我的爱好</a>
