--- a/suser/class.html
+++ b/suser/class.html
@@ -12,11 +12,11 @@
             </style>
 </head>
 <body>  
-        <a href="../my.html">首页</a>
+        <a href="../index.html">首页</a>
         <a href="../suser/suse.html">我的宿舍</a>
         <a href="../suser/class.html">我的班级</a>
         <a href="../suser/aihao.html">我的爱好</a>
-        <a href="../my.html">返回</a>
+        <a href="../index.html">返回</a>
         <h1>柳州职业技术学院</h1>
         <p>学校深化国际化办学水平，引入国际人才培养标准。自2012年以来，先后实施教育部-DMG MS数控专业领域合作项目、FANUC数控系统应用技术中心项目、德国西门子先进自动化技术联合示范实训中心项目、教育部-中德职业教育汽车机电（SGAVE）项目、英国现代学徒制项目、德国“双元制”培养模式、柳州市德国AHK职业培训中心项目。2017年，成为欧洲侍酒师学校中国项目首家合作院校，并与马来西亚成功礼待大学、乌克兰基辅国立大学等达成合作意向。同年，启用与广西柳工机械股份有限公司共建的“柳工－柳职院全球客户体验中心”。2018年初，“柳工-柳职院全球客户体验中心印度分中心”在印度成立；在沙特阿拉伯王国与柳工、沙特卡坦尼集团合作筹建的卡坦尼学院招生在即。</p>
     <p><img src="../images/class.jpg" alt=""></p>
