--- a/suser/suse.html
+++ b/suser/suse.html
@@ -12,11 +12,11 @@
             </style>
 </head>
 <body>
-        <a href="../my.html">首页</a>
+        <a href="../index.html">首页</a>
         <a href="../suser/suse.html">我的宿舍</a>
         <a href="../suser/class.html">我的班级</a>
         <a href="../suser/aihao.html">我的爱好</a>
-        <a href="../my.html">返回</a>
+        <a href="../index.html">返回</a>
         <h1>柳州职业技术学院</h1>
         <p>学校设有机电工程学院、汽车工程学院、电子信息工程学院、环境与食品工程学院、财经与物流管理学院、贸易与旅游管理学院、艺术学院、马克思主义学院、通识教育学院等9个教学院部，开设有57个专业。其中国家级重点专业10个，自治区级特色专业15个，自治区级优势特色专业3个，自治区示范特色专业及实训基地5个，自治区级精品专业1个，自治区级优质专业14个。现有国家级精品课程6门，国家精品资源共享课5门，国家级教改试点专业1个，自治区精品课程27门，参与国家级专业教学资源库建设5个，主持自治区级专业教学资源库2个，自建校级专业教学资源库18个。拥有国家级教学成果6项，是广西拥有国家级教学成果奖励最多的高职院校。</p>
        <p><img src="../images/suse.jpg" alt=""></p>
