--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <p>学校占地面积75.3万平米，固定资产总值约8.2亿元，图书75万册。拥有国家级示范实训基地10个，自治区示范特色专业及实训基地5个，自治区示范性高等职业教育实训基地14个，自治区示范性高等职业教育建设实训基地2个，柳州市级千万元实训基地2个，校内外实训基地总共142个，职业技能鉴定机构9个，是全区实训条件最为先进、功能最为齐全的高职院校。</p>
 
 <p>
-<img src="../我的个人空间/images/aa.jpg" alt="">
+<img src="./images/aa.jpg" alt="">
 </p>
 <p>
-   <img src="../我的个人空间/images/shouye.jpg" alt="">
+   <img src="./images/shouye.jpg" alt="">
        </p>
         
 </body>
